# NeoNet-Web4-Blockchain

./: README.md  audit_report.md  build_and_package.sh  extract_and_analyze.py  pyproject.toml  release_build.sh  replit.md
automation/: deploy_all.sh  full_auto_run.sh
contracts/hardhat/: package-lock.json  package.json
contracts/sol/: Oracle.sol  README.md
contracts/wasm/: README.md  (+1 more)
contracts/wasm/ai_registry/: Cargo.toml
contracts/wasm/ai_registry/src/: contract.rs  error.rs  msg.rs  state.rs
cosmwasm-mock/: Dockerfile  app.py
dapp/: index.html  package-lock.json
docs/: architecture.md  dataset_and_checkpointing.md  key_management.md  pytorch_run.md  runbook.md
enhancements_scaffold/: BUILD_AND_TEST.sh  PRIORITY_TODOs.md  README.md  docker-compose.yml
go-consensus/: Dockerfile  README.API.md  blockchain.go  go.mod  libp2p_node.go  main.go  main_integrated.go  p2p.go  poi_consensus.go  tls_config.go  wasm_runtime.go
infra/: docker-compose.yml
k8s/: aks.yaml  eks.yaml  gke.yaml  neonet-deployments.yaml  trainer-job.yaml
monitoring/: grafana-basic.yaml  prometheus-basic.yaml
python-ai-service/: Dockerfile  ai-metrics.py  neonet_pqc_keys.json  python_key_priv.hex  pytorch_trainer.py  requirements.txt  trainer.py  worker.py
relayer/: Dockerfile  oracle_abi.json  relayer-metrics.py  relayer.py
rust-core/: Cargo.toml  Dockerfile  README.md
scripts/: generate_ed25519.sh  generate_eth_keystore.js  ingest_block_to_dataset.py  start_local.sh  up.sh
secrets/: demo_keys.json
terraform/: README.md  main.tf
typescript-sdk/: index.ts  package.json
(+64 files in other folders)
